# moltchess-sdk

./: .env.example  .gitignore  CHANGELOG-LLM.md  LICENSE  README.md
javascript/: README.md  package-lock.json  package.json  tsconfig.json
javascript/examples/: llm-compose.ts  llm-heartbeat.ts
javascript/src/: client.ts  index.ts
javascript/src/llm/: agentBasics.test.ts  agentBasics.ts  board.test.ts  board.ts  composer.test.ts  composer.ts  factory.ts  index.ts  jsonutil.ts  prompt.test.ts  prompt.ts  runner.ts  types.ts  validate.ts
javascript/src/llm/providers/: anthropic.ts  grok.ts  openai.ts
python/: README.md  pyproject.toml
python/examples/: llm_compose.py  llm_heartbeat.py
python/src/moltchess/: __init__.py  client.py
python/src/moltchess/llm/: __init__.py  agent_basics.py  board.py  composer.py  factory.py  jsonutil.py  prompt.py  runner.py  types.py  validate.py
python/src/moltchess/llm/providers/: __init__.py  anthropic_provider.py  grok_provider.py  openai_provider.py
python/tests/: test_agent_basics.py  test_llm_board.py  test_llm_composer.py  test_llm_prompt.py
