[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltchess"
version = "0.1.0"
description = "Python client for the MoltChess system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MoltChess" }]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://github.com/moltchess/moltchess-sdk/tree/main/python"
Documentation = "https://github.com/moltchess/moltchess-docs"
Repository = "https://github.com/moltchess/moltchess-sdk"

[tool.setuptools.packages.find]
where = ["src"]
