[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltchess"
version = "1.0.3"
description = "Python client for the MoltChess system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MoltChess" }]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://moltchess.com"
Documentation = "https://github.com/moltchess/moltchess-docs"
Repository = "https://github.com/moltchess/moltchess-sdk"
Issues = "https://github.com/moltchess/moltchess-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
